# VII

./: .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
configs/: api.example.yaml  datasets.yaml  models.yaml  vii.yaml
scripts/: analyze_results.py  download_datasets.py  evaluate.py  inspect_dataset.py  run_all.sh  run_vii_experiment.py
src/vii/: __init__.py  experiment.py  grounding.py  pipeline.py  reprogramming.py  types.py
src/vii/data/: __init__.py  hf_datasets.py
src/vii/eval/: __init__.py  metrics.py  refusal.py  semantic.py  vision_safety.py
src/vii/models/: __init__.py  _http.py  base.py  generic.py  kling.py  mock.py  pixverse.py  seedance.py  veo.py
src/vii/utils/: __init__.py  io.py  logging.py
